# temporal-lambda

./: .gitignore  LICENSE  README.md  dune-project  index.html
.github/workflows/: gh-pages.yml
examples/: 3dprint.mlt  basic_unbox.mlt  delay.mlt  fold_over_boxes.mlt  hidden_delay.mlt  nat.mlt  recursion.mlt  synthesis.mlt  test.mlt  toplevel.mlt
src/00-utils/: constraint.ml  context.ml  print.ml  state.ml  symbol.ml
src/01-language/: ast.ml  const.ml  context.ml  exception.ml  prettyPrint.ml  tau.ml
src/02-parser/: grammar.mly  lexer.mll  sugaredAst.ml
src/03-desugarer/: desugarer.ml
src/04-typechecker/: constraint.ml  dune  primitives.ml  typechecker.ml
src/05-backends/interpreter/cli/: cliInterpreter.ml
src/05-backends/interpreter/core/: interpreter.ml  primitives.ml
src/05-backends/interpreter/web/: redexSelectorTM.ml  webInterpreter.ml
src/05-backends/sig/core/: backend.ml  dune
src/06-user-interface/cli/: cli.ml
src/06-user-interface/core/: loader.ml  stdlib.mlt
src/06-user-interface/web/: dune  model.ml  view.ml
tests/: iterative_unbox.mlt  run_tests.t  test_mocked_ops.mlt  test_temporal.mlt  test_temporal_recursion.mlt
web/: index.html
