(executable
 (name web)
 (libraries webInterpreter loader)
 (modes js)
 (link_flags -no-check-prims)
 (promote
  (until-clean)
  (into ../../../web)
  (only web.bc.js)))

;; This is an expanded form of the trick used in src/core/dune to generate the module
;; Examples_mlt with the examples to include in the web interface.

(rule
 (with-stdout-to
  examples_mlt.ml
  (progn
   (echo "let examples = [")
   ;; We need to repeat the following three lines for each included example.
   ;; The first line gives the name of the example and the second gives its source.
   (echo "({|Recursive functions on integers|}, {|")
   (cat ../../../examples/recursion.mlt)
   (echo "|});")
   (echo "({|Recursive functions over resources|}, {|")
   (cat ../../../examples/fold_over_boxes.mlt)
   (echo "|});")
   (echo "({|Natural numbers as an inductive type|}, {|")
   (cat ../../../examples/nat.mlt)
   (echo "|});")
   (echo "({|Basic temporal operations|}, {|")
   (cat ../../../examples/delay.mlt)
   (echo "|});")
   (echo "({|3D printing|}, {|")
   (cat ../../../examples/3dprint.mlt)
   (echo "|});")
   (echo "({|Top-level structures|}, {|")
   (cat ../../../examples/toplevel.mlt)
   (echo "|});")
   (echo "]"))))
